# vertector-nats

./: .env.example  .env.production.example  .gitignore  GEMINI.md  LICENSE  QUICKSTART.md  README.md  delete_consumer.py  docker-compose.tls.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: nats-server-tls.conf
examples/: consumer_example.py  demo_pub_sub.py  integrated_schedule_service.py  metrics_demo.py  publish_complete_test.py  publish_variety.py  publisher_example.py
monitoring/: prometheus.yml
scripts/: generate_auth_credentials.sh  generate_tls_certs.sh  security_audit.sh
src/vertector_nats/: __init__.py  client.py  config.py  consumer.py  events.py  events.py.backup  metrics.py  publisher.py
tests/: __init__.py  conftest.py  test_config.py  test_consumer.py  test_events.py  test_publisher.py
tests/integration/: __init__.py  test_authentication.py  test_end_to_end.py  test_tls_connection.py
tests/load/: __init__.py  test_load_publishing.py
